fix: changed opinion on css spacing #36

--- a/sharetunes-app/src/components/pages/DiscoverPage/discoverPage.module.scss
+++ b/sharetunes-app/src/components/pages/DiscoverPage/discoverPage.module.scss
@@ -96,8 +96,9 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: left;
+    top: 0px;
     align-items: center;
-    align-content: space-evenly;
+    align-content: space-between;
     padding: 20px;
     flex:4;
 }
